--- a/userandlogin/app/src/main/res/layout/appointment_item.xml
+++ b/userandlogin/app/src/main/res/layout/appointment_item.xml
@@ -17,7 +17,7 @@
             android:id="@+id/clientName"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="שם הלקוח"
+            android:text="שם הלקוח :"
             android:textSize="16sp"
             android:layout_marginBottom="4dp"/>
 
@@ -25,7 +25,7 @@
             android:id="@+id/clientPhone"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="מספר טלפון"
+            android:text="מספר טלפון :"
             android:textSize="14sp"
             android:layout_marginBottom="4dp"/>
 
@@ -33,7 +33,7 @@
             android:id="@+id/status"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="זמן תור "
+            android:text="זמן תור : "
             android:textSize="14sp"
             android:textColor="@android:color/holo_blue_dark"/>
 
