--- a/userandlogin/app/src/main/res/layout/fragment_user_manage.xml
+++ b/userandlogin/app/src/main/res/layout/fragment_user_manage.xml
@@ -20,11 +20,11 @@
         android:padding="8dp"
         android:textSize="16sp" />
 
-    <RecyclerView
-        android:id="@+id/recyclerView"
+    <androidx.recyclerview.widget.RecyclerView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
-        tools:listitem="@layout/appointment_item"/>
+        tools:listitem="@layout/appointment_item"
+        android:id="@+id/RecycleView"/>
+
 
 </LinearLayout>
