--- a/userandlogin/app/src/main/res/drawable/custom_button_background.xml
+++ b/userandlogin/app/src/main/res/drawable/custom_button_background.xml
@@ -1,8 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android">
-    <solid android:color="#A9A9A9" />
+    <solid android:color="#231F1F" />
     <corners android:radius="66dp" />
-    <stroke android:color="#FFFFFF" android:width="1dp" />
-    <text android:textSize="16sp" android:textColor="#050505" android:fontFamily="sans-serif-medium" />
+    <stroke android:color="#120F0F"
+        android:width="1dp" />
+    <text android:textSize="16sp"
+        android:textColor="#B1AAAA"
+        android:fontFamily="sans-serif-medium" />
     <padding android:left="12dp" android:right="12dp" android:top="12dp" android:bottom="12dp" />
 </shape>
