--- a/userandlogin/app/src/main/res/drawable/edit_text_style.xml
+++ b/userandlogin/app/src/main/res/drawable/edit_text_style.xml
@@ -3,5 +3,5 @@
     <solid android:color="@color/edit_text_background_color" /> <!-- צבע הרקע -->
     <stroke android:color="@color/edit_text_border_color" android:width="2dp" />
     <corners android:radius="66dp" />
-    <corners android:radius="8dp" /> <!-- רדיוס 8dp לפינות -->
+    <corners android:radius="8dp" />
 </shape>
